@@ -151,7 +151,7 @@ test_that("as.Node.list warning", {
   lol <- list(type = "Root", list(type = "Rule", count = 1), list(type = "Rule", count = 2))
   #tree <- FromListSimple(lol, nameName = NULL, nodeName = 1)
   tree <- NULL
-  expect_that(FromListSimple(lol, nameName = NULL, nodeName = 1, warn = FALSE), not(gives_warning()))
+  expect_that(FromListSimple(lol, nameName = NULL, nodeName = 1, check = "no-warn"), not(gives_warning()))
   expect_that(tree <- FromListSimple(lol, nameName = NULL, nodeName = 1), gives_warning())
   
   expect_equal(tree$totalCount, 3)
@@ -159,6 +159,10 @@ test_that("as.Node.list warning", {
   
   expect_equal(unname(tree$Get("count")), c(2,0,0))
   expect_equal(unname(tree$Get("count2")), c(NA, 1, 2))
+  
+  expect_that(FromListSimple(lol, nameName = NULL, nodeName = 1, check = "no-check"), not(gives_warning()))
+  expect_that(tree <- FromListSimple(lol, nameName = NULL, nodeName = 1), gives_warning())
+  
   
 })
 
